[tool.poetry]
name = "fastapp"
version = "0.1.0"
description = ""
authors = ["Evan Baird <mrcartoonster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.62.0"}
mimesis = "^4.1.2"
segno = "^1.3.1"
emoji = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-emoji = "^0.2.0"
pytest-picked = "^0.4.4"
pytest-clarity = "^0.3.0-alpha.0"
pytest-randomly = "^3.5.0"
locust = "^1.4.1"
ipython = "^7.19.0"
prettyprinter = "^0.18.0"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
