[tool.poetry]
name = "fastapp"
version = "0.1.0"
description = ""
authors = ["Evan Baird <mrcartoonster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.62.0"}
mimesis = "^4.1.2"
segno = "^1.3.1"
emoji = "^0.6.0"
gunicorn = "^20.0.4"
httpx = "^0.16.1"
email-validator = "^1.1.2"
pytest-clarity = "^0.3.0-alpha.0"
pytest-emoji = "^0.2.0"
pytest-randomly = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-picked = "^0.4.4"
ipython = "^7.19.0"
prettyprinter = "^0.18.0"
pre-commit = "^2.9.3"
pytest-pythonpath = "^0.7.3"

[tool.pytest.ini_options]
addopts = "-rssxX -l --tb=short --strict --randomly-seed=last --diff-type=split --emoji -vvv -p no:warnings"
xfail_strict = "True"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
